--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
+          tags: hoge
           ghcr.io/${{ github.repository }}: latest
   
